# phasedBasedMotionUtil

./: .gitignore  AGENTS.md  PARALLELIZATION_ANALYSIS.md  README.md  codeReviewFindings.md  contributing.md  nvhFeatures.md  pyproject.toml  run.bat  source-code-footer.txt  systemDesign.md
docs/: architecture-notes.md  deviations.md
src/phase_motion_app/: __init__.py
src/phase_motion_app/app/: __init__.py  drift_editor.py  main.py  main_window.py  terminal_outcome.py  windows_shell.py
src/phase_motion_app/core/: __init__.py  acceleration.py  baseline_band.py  diagnostics.py  diagnostics_bundle.py  drift.py  ffprobe.py  image_ops.py  ipc.py  job_state.py  jsonl_log.py  masking.py  media_tools.py  models.py  phase_engine.py  preflight.py  quantitative_analysis.py  render_job.py  render_supervisor.py  retention.py  settings_store.py  sidecar.py  source_normalization.py  (+3 more)
tests/: test_acceleration.py  test_app_theme.py  test_band_suggestion_quick.py  test_baseline_band.py  test_diagnostics.py  test_diagnostics_bundle.py  test_drift.py  test_drift_editor.py  test_ffprobe.py  test_image_ops.py  test_ipc_integration.py  test_job_state.py  test_main_window.py  test_masking.py  test_media_tools.py  test_phase_engine.py  test_preflight.py  test_quantitative_analysis.py  test_render_supervisor.py  test_render_worker.py  test_repo_hygiene.py  test_retention.py  test_settings_store.py  test_sidecar.py  test_source_normalization.py  test_storage.py  test_terminal_outcome.py  test_toolchain.py  test_watchdog.py  test_worker_bootstrap.py
tools/: perf_smoke_phase_pipeline.py
(+4 files in other folders)
